--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,3 +5,8 @@ data_ingestion:
   source_URL: https://drive.google.com/file/d/1Sv4oGZbUC9BJW0P0syig7eeVlhBgSQ45/view?usp=sharing
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+prepare_base_model:
+  root_dir: artifacts/prepare_base_model
+  base_model_path: artifacts/prepare_base_model/base_model.h5
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
